[package]
name = "tower-image-xform"
version = "0.1.0"
description = "🖼️ Image transformations as a `tower` middleware."
edition = "2021"
homepage = "https://github.com/maxcountryman/tower-image-xform"
license = "MIT"
keywords = ["image", "resize", "tower", "axum", "resize-images"]
categories = ["web-programming::http-server", "web-programming", "asynchronous"]
repository = "https://github.com/maxcountryman/tower-image-xform"
documentation = "https://docs.rs/tower-image-xform"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
bytes = "1.7.1"
futures-util = "0.3.30"
headers-accept = "0.1.3"
hmac = "0.12.1"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
image = "0.25.2"
mediatype = "0.19.18"
percent-encoding = "2.3.1"
rand = "0.8.5"
reqwest = "0.12.7"
sha2 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.3"
tokio = "1.39.3"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = { version = "0.1.40", features = ["log"] }
url = { version = "2.5.2", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
axum = "0.7"
tower = "0.4"
tokio = { version = "1.39.3", features = ["full"] }
