[package]
name = "example-basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.74"
axum = "0.7.0"
http = "1.0.0"
hyper = "1.0.1"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-image-xform = { path = "../../" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
